--- a/two_layer_net_numpy.ipynb
+++ b/two_layer_net_numpy.ipynb
@@ -13,20 +13,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Neural network implemented using Numpy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A fully connected Relu (rectified linear unit) with one hidden layer and no biases, trained to predict y from x using Euclidean error.\n",
     "\n",
-    "Warm-up: numpy\n",
-    "--------------\n",
+    "This implementation uses numpy to manually compute the forward pass, loss and backward pass.\n",
     "\n",
-    "A fully-connected ReLU network with one hidden layer and no biases, trained to\n",
-    "predict y from x using Euclidean error.\n",
-    "\n",
-    "This implementation uses numpy to manually compute the forward pass, loss, and\n",
-    "backward pass.\n",
-    "\n",
-    "A numpy array is a generic n-dimensional array; it does not know anything about\n",
-    "deep learning or gradients or computational graphs, and is just a way to perform\n",
-    "generic numeric computations.\n",
-    "\n"
+    "A numpy array is a generic n-dimensional array; it does not know anythin about deep learning or gradients or computational graphs, and is just a way to perform generic numeric computations."
    ]
   },
   {
